--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>The Time Machine</title>
+    <title>Tracer</title>
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
